--- a/package.json
+++ b/package.json
@@ -11,14 +11,24 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.1.0",
+    "@angular/cdk": "^16.2.2",
     "@angular/common": "^16.1.0",
     "@angular/compiler": "^16.1.0",
     "@angular/core": "^16.1.0",
     "@angular/forms": "^16.1.0",
+    "@angular/material": "^16.2.2",
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.1",
+    "@popperjs/core": "^2.11.6",
+    "angular-highcharts": "^16.0.0",
+    "bootstrap": "^5.2.3",
+    "chart.js": "^2.9.4",
+    "ngx-mat-select-search": "^7.0.3",
+    "ngx-select-dropdown": "^3.3.1",
     "rxjs": "~7.8.0",
+    "tradingeconomics": "^2.2.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -26,6 +36,8 @@
     "@angular-devkit/build-angular": "^16.1.6",
     "@angular/cli": "~16.1.6",
     "@angular/compiler-cli": "^16.1.0",
+    "@angular/localize": "^16.1.0",
+    "@types/chart.js": "^2.9.38",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
